# AgenticAI

./: .env.example  .gcloudignore  .gitignore  Dockerfile  Dockerfile.router  MONOREPO_README.md  README.md  ROUTER.md  WINDOWS.md  cloudrun-router-env.example.yaml  requirements.txt  test.txt
data-agent/: .gcloudignore  Dockerfile  README.md  cloudrun-env.example.yaml  requirements.txt
data-agent/data_a2a_agent/: __init__.py  agent.py  config.py  session_keys.py  table_ui.py  tools.py
data-agent/tests/: test_config.py  test_table_ui.py  test_tools.py
docs/: MAP_AGENT_SCHEMA_AWARE_TABLES.md  PROJECT_ARCHITECTURE.md  ROUTING_AGENT_DETAILED_STEPS.docx  ROUTING_AGENT_DETAILED_STEPS.md  TEAM_AND_REPO_GUIDE.md
map-agent/: .dockerignore  .env.example  .gcloudignore  Dockerfile  MONOREPO_NOTES.md  Makefile  README.md  cloudrun-env.example.yaml  pyproject.toml
map-agent/app/: agent.py  agent_executor.py  bridge_tools.py  bridge_ui.py  config.py  main.py  session_keys.py
map-agent/app/catalog_schemas/0.8/: bridge_map_catalog.json
map-agent/app/catalog_schemas/0.9/: bridge_map_catalog.json
map-agent/app/examples/bridge_map_catalog/0.8/: map.json
map-agent/app/examples/bridge_map_catalog/0.9/: map.json
map-agent/scripts/: deploy_cloud_run.ps1  deploy_cloud_run.sh  register_gemini_enterprise.ps1  set_maps_secret.ps1  verify_deployment.ps1  verify_deployment.sh
map-agent/tests/integration/: main_e2e_test.py  remote_e2e_test.py
map-agent/tests/unit/: agent_card_test.py  agent_executor_test.py  bridge_map_payload_test.py  bridge_tools_test.py  config_test.py  deployment_config_test.py
router-agent/: .gcloudignore  Dockerfile  README.md  cloudrun-env.example.yaml  requirements.txt
router-agent/orchestrator_router/: __init__.py  app.py  auth.py  card.py  classifier.py  config.py  routing.py
router-agent/tests/: test_router.py
scripts/: deploy-cloud-run.ps1.txt  deploy-cloud-run.sh.txt  run-local.ps1.txt  set-env.ps1.txt
tests/: test_router.py
tools/: build_code_explanation_doc.py
