[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.23.8,<1.0.0",
  "requests>=2.32.0,<3.0.0"
]

[project]
name = "gemini-enterprise-bridge-map"
version = "0.1.0"
description = "Gemini Enterprise A2UI agent that maps bridge inventory from BigQuery."
authors = [
  {name = "Your Name", email = "your@email.com"}
]
dependencies = [
  "google-adk>=1.16.0,<2.0.0",
  "a2a-sdk~=0.3.22",
  "google-cloud-bigquery>=3.25.0,<4.0.0",
  "google-cloud-secret-manager>=2.20.0,<3.0.0",
  "google-genai>=1.0.0,<2.0.0",
  "uvicorn~=0.34.0",
  "a2ui-agent-sdk>=0.1.1",
  "python-dotenv>=1.0.0,<2.0.0",
  "starlette>=0.40.0,<1.0.0",
  "typing-extensions>=4.12.0,<5.0.0"
]
requires-python = ">=3.10,<3.14"

[project.optional-dependencies]
lint = [
  "ruff>=0.4.6,<1.0.0",
  "ty>=0.0.1a0",
  "codespell>=2.2.0,<3.0.0"
]

[tool.agent-starter-pack]
# Generation metadata - enables CLI commands to understand project context
# These fields allow any generated project to work as a remote template
name = "gemini-enterprise-bridge-map"
description = "Gemini Enterprise bridge map agent with A2A and A2UI"
base_template = "adk_a2a"
agent_directory = "app"
# Generation context
generated_at = "2026-03-30T22:52:39.068034+00:00"
asp_version = "0.41.1"

[tool.agent-starter-pack.create_params]
# Parameters used during project creation
deployment_target = "cloud_run"
session_type = "in_memory"
cicd_runner = "google_cloud_build"
include_data_ingestion = false
datastore = "none"

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,**/*.ipynb,**/package-lock.json"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "W", # pycodestyle warnings
  "I", # isort
  "C", # flake8-comprehensions
  "B", # flake8-bugbear
  "UP", # pyupgrade
  "RUF" # ruff specific rules
]
ignore = ["E501", "C901", "B006"] # ignore line too long, too complex

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ty]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
# Ignore common issues with third-party libraries and dynamic code patterns
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"

[tool.ty.src]
exclude = [".venv/**"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
